# Open_CV_Experiments

./: CMakeLists.txt  Main.cpp  Recognition.h
